--- a/src/app/blog/blog-post/blog-post.component.scss
+++ b/src/app/blog/blog-post/blog-post.component.scss
@@ -184,7 +184,8 @@
   .news-item.full-item .news-item-content p {
   font-size: 18px;
   color: #3b4243;
-  padding-right: 30px;
+  padding-right: 20px;
+  padding-left: 20px;
   padding-bottom: 22px;
   text-align: justify;
   }
