--- a/src/app/blog/coding-tutorials-list/coding-tutorials-list.component.html
+++ b/src/app/blog/coding-tutorials-list/coding-tutorials-list.component.html
@@ -4,10 +4,10 @@
     <div class="col">
       <section class="our-blog" style="padding-top: 50px">
         <div class="container">
-            <!-- <div class="text-center">
-                <h2><span>Coding</span> Tutorials</h2>
-                <p>A series of tutorials in front-end development with Angular and handling geospatial data with Python and R.</p>
-            </div> -->
+            <div class="text-center">
+                <h2><span>Blog</span></h2>
+                <p>Opinion articles & essays, either in Greek or in English, and tutorials in front-end development with Angular and handling geospatial data with Python and R.</p>
+            </div>
             <div class="row mt-5">
                     <div *ngFor="let item of news | paginate: config; index as i;" class="col-12 col-2m-6 col-md-4" style="padding-bottom: 25px">
                         <div class="card">
