--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -12,7 +12,7 @@
     -o-transition: all 0.15s linear;
     transition: all 0.15s linear;
   }
-  @media (min-width: 991.99px) {    
+  @media (min-width: 991.99px) {
     .header-fullpage.fixed {
         background: #FFF;
         box-shadow: 0px 0px 43px 0px rgba(2, 2, 2, 0.28);
@@ -28,7 +28,7 @@
         border: 0;
         padding: 0;
         min-height: auto;
-  
+
         -webkit-transition: all 0.15s linear;
         -moz-transition: all 0.15s linear;
         -o-transition: all 0.15s linear;
@@ -41,12 +41,12 @@
   .header-fullpage.fixed .navbar-brand {
     width: 140px;
   }
-  .header-fullpage.fixed.navbar-expand-md .navbar-nav .nav-item, 
+  .header-fullpage.fixed.navbar-expand-md .navbar-nav .nav-item,
   .header-fullpage.fixed.navbar-expand-lg .navbar-nav .nav-item{
     padding-top: 1rem;
   }
   /* 3.1 Headers Styles End */
-  
+
   /*------------------------------------------*/
   /*    3.2 Navbars Styles
   /*------------------------------------------*/
@@ -76,12 +76,12 @@
   -ms-transform-origin: 10% 10%;
   transform-origin: 10% 10%;
   }
-  
+
   .navbar-toggler.x .icon-bar:nth-of-type(2) {
   opacity: 0;
   filter: alpha(opacity=0);
   }
-  
+
   .navbar-toggler.x .icon-bar:nth-of-type(3) {
   -webkit-transform: rotate(-45deg);
   -ms-transform: rotate(-45deg);
@@ -90,14 +90,14 @@
   -ms-transform-origin: 10% 90%;
   transform-origin: 10% 90%;
   }
-  
+
   /* ANIMATED X COLLAPSED */
   .navbar-toggler.x.collapsed .icon-bar:nth-of-type(1) {
   -webkit-transform: rotate(0);
   -ms-transform: rotate(0);
   transform: rotate(0);
   }
-  
+
   .navbar-toggler.x.collapsed .icon-bar:nth-of-type(2) {
   opacity: 1;
   filter: alpha(opacity=100);
@@ -116,7 +116,7 @@
     padding: 1rem 0;
   }
   .navbar-expand-lg .navbar-nav .nav-item:not(:last-child){
-    margin: 0 3px;    
+    margin: 0 3px;
   }
   .navbar-expand-lg .navbar-nav .nav-link {
     color: #086b6f;
@@ -149,7 +149,7 @@
   .dropdown-menu li > .dropdown-menu:after{
     display: none;
   }
-  .dropdown-menu a, 
+  .dropdown-menu a,
   .dropdown-menu li > a {
     font-size: 0.875rem;
     padding: 0.7rem 0.9rem;
@@ -162,10 +162,10 @@
   .dropdown-menu li:last-child > a{
     border: none;
   }
-  .dropdown-item.active, 
-  .dropdown-item:focus, 
-  .dropdown-item:hover, 
-  .dropdown-item:active, 
+  .dropdown-item.active,
+  .dropdown-item:focus,
+  .dropdown-item:hover,
+  .dropdown-item:active,
   .dropdown-menu > li.show > a {
     text-decoration: none;
     border-radius: 0;
@@ -184,12 +184,12 @@
   .active {
     color: white !important;
     background-color: #27304b!important;
-    
+
   }
 
   .navbar-toggler-icon {
   }
-  
+
   .dropdown-item-icon {
     display: inline-block;
     vertical-align: middle;
@@ -200,3 +200,133 @@
     margin-right: .5rem;
   }
   /*   3.2 Navbars Styles End  */
+
+  body {
+    background: rgba(0, 0, 0, 0.8);
+    color: white;
+    font-family: sans-serif;
+
+    ul {
+      list-style: none;
+      > li {
+        padding: 0.5rem 0;
+      }
+    }
+    .content {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .image {
+        height: 150px;
+        width: 150px;
+
+        background: url(https://picsum.photos/500);
+        background-size: cover;
+      }
+      p {
+        text-align: center;
+        width: 320px;
+      }
+    }
+  }
+
+  .burger {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 8;
+
+    /* The Burger Lines*/
+    > div {
+      transition: all 0.3s ease;
+
+      position: relative;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 5px;
+      background: white;
+
+      &::before,
+      &::after {
+        background: inherit;
+        position: absolute;
+        display: block;
+        content: "";
+        width: 100%;
+        height: 5px;
+      }
+      &::before {
+        top: -20px;
+      }
+      &::after {
+        top: 20px;
+      }
+    }
+    /****************/
+  }
+
+  .menu-wrap {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
+
+  .menu {
+    font-size: 2rem;
+
+    background: black;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+
+    z-index: 2;
+
+    > ul {
+      opacity: 0;
+      transition: opacity 0.2s ease 0.1s;
+    }
+  }
+
+  .toggler {
+    position: relative;
+    height: 50px;
+    width: 50px;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 10;
+
+    &:checked ~ .menu {
+      visibility: visible;
+      > ul {
+        opacity: 1;
+      }
+    }
+
+    &:checked ~ .burger > div {
+      transform: rotate(45deg);
+
+      &::before,
+      &::after {
+        top: 0;
+        transform: rotate(90deg);
+      }
+    }
+  }
